# rendimidi

./: .gitignore  CMakeLists.txt
example/: main.cpp
include/: rendimidi.h
src/: rendimidi.cpp
